# boost_wasm_voronoi

./: .gitignore  CMakeLists.txt  build_opencv.bat  build_opencv_windows.bat  build_wasm.bat  build_wasm.ps1  build_windows.ps1  generate_type_definitions.bat  generate_wasm.ps1  generate_windows.ps1  httpdocs  index.html  launch_live_server.ps1  main.js  main.ts  package-lock.json  package.json  readme.md  requirements.txt  style.css  test_module.js  tsconfig.json  vite.config.js
build_wasm/: boost_voronoi.wasm
js/: canvas_example.ts  main.js  memory_reader.ts  pixi_example.ts  test_module.js  test_module.ts  utils.js
powershell/: utils.psm1
preview_dist/: index.html
preview_dist/assets/: index-BdY6j4qe.js  index-ZwmyLmFa.css
python/: read_structs.py
src/: contour_finder.cpp  contour_finder.h  jc_voronoi_example.cpp  main.cpp  my_types.h  pch.hpp  voronoi_diagram.cpp  voronoi_diagram.h
src/algorithms/: PoissonDiscSampling.cpp  PoissonDiscSampling.h  RNDGenerator.h
types/: main.d.ts
types/build_wasm/: boost_voronoi.d.ts
